修复了已知漏洞并更新为 0.0.0.7 版本